<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home" />
    <item
        android:id="@+id/configure"
        android:title="@string/configure_training" />
    <item
        android:id="@+id/history"
        android:title="@string/trainingsplan_history" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

</menu>