...
            app:layout_constraintBottom_toTopOf="@+id/tvExercise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/next"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvExercise"
...
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_stop"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:textSize="16sp"
...
